--- a/demo/calendar.html
+++ b/demo/calendar.html
@@ -20,7 +20,7 @@
 	
 </head>
 <body>
-	<swl-calendar view="day">
+	<swl-calendar view="day" year="2014" month="7" day="16" week="29">
 		<swl-calendar-item from="2014-07-14" to="" allday="true" summary="A all">A all-day</swl-calendar-item>
 		<swl-calendar-item from="2014-07-17" to="2014-07-19" allday="true" summary="B all">B all-day</swl-calendar-item>
 		<swl-calendar-item from="2014-07-11" to="2014-07-16" allday="true" summary="C all">C all-day</swl-calendar-item>
