minified version of sticky list headers

--- a/src/swl-calendar.html
+++ b/src/swl-calendar.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="swl-calendar.css" shim-shadowdom>
-<script src="libs/sticky-list-headers/src/sticky-list-headers.js"></script>
+<script src="libs/sticky-list-headers/src/sticky-list-headers.min.js"></script>
 
 <template id="swl-calendar-year">
 	<header>
