day sticky list header

--- a/src/swl-calendar.html
+++ b/src/swl-calendar.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="swl-calendar.css" shim-shadowdom>
-<script src="libs/sticky-list-headers/src/sticky-list-headers.min.js"></script>
+<script src="libs/sticky-list-headers/src/sticky-list-headers.js"></script>
 
 <template id="swl-calendar-year">
 	<header>
@@ -202,11 +202,12 @@
 								<div></div>
 								<div></div>
 							</div>
-							<ul>
-								<template>
-									<li></li>
-								</template>
-							</ul>
+						</template>
+						<template>
+							<p>
+								<span></span>
+								<span></span>
+							</p>
 						</template>
 					</div>
 				</div>
@@ -249,7 +250,7 @@
 							</div>
 						</div>
 					</div>
-				</day>
+				</div>
 			</div>
 		</template>
 	</div>
