added all calendar view buttons on each view type (year, month, week, day)

--- a/src/swl-calendar.html
+++ b/src/swl-calendar.html
@@ -10,6 +10,7 @@
 		</menu>
 		<div></div>
 		<menu>
+			<button class="disabled">year</button>
 			<button>month</button>
 			<button>week</button>
 			<button>day</button>
@@ -52,6 +53,7 @@
 		<div></div>
 		<menu>
 			<button>year</button>
+			<button class="disabled">month</button>
 			<button>week</button>
 			<button>day</button>
 		</menu>
@@ -112,6 +114,7 @@
 		<menu>
 			<button>year</button>
 			<button>month</button>
+			<button class="disabled">week</button>
 			<button>day</button>
 		</menu>
 	</header>
@@ -179,6 +182,7 @@
 			<button>year</button>
 			<button>month</button>
 			<button>week</button>
+			<button class="disabled">day</button>
 		</menu>
 	</header>
 	<div class="swl-calendar day">
